# flowly-kafka

./: .gitignore  Cargo.toml  README.md
src/: builder.rs  config.rs  consumer.rs  error.rs  lib.rs  message.rs  producer.rs
