[package]
name = "flowly-kafka"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
bytes = "1.10.1"
chrono = "0.4.41"
flowly = { path = "../flowly" }
futures = "0.3.31"
log = "0.4.27"
rdkafka = "0.38.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.14"
