[package]
name = "flowly-kafka"
version = "0.4.4"
edition = "2024"
authors = ["Andrey Tkachenko <andrey@aidev.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/flowly-team/flowly-kafka"
homepage = "https://github.com/flowly-team/flowly-kafka"
description = """
flowly-kafka is a reusable kafka component for flowly.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["pipeline", "async",  "kafka"]


[dependencies]
async-stream = "0.3.6"
bytes = "1.10"
chrono = "0.4"
flowly = "0.4"
futures = "0.3"
log = "0.4"
rdkafka = "0.38"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["time"] }
